Fixed using unsupported stream function in java 11